--- a/안나-김민희/react-airbnb-app/src/App.css
+++ b/안나-김민희/react-airbnb-app/src/App.css
@@ -18,11 +18,12 @@ body {
   width: 100%;
   position: fixed;
   top: 0;
+  left: 0;
   background-color: white;
-  z-index: 1;
+  z-index: 999;
 }
 
-header {
+Header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -179,12 +180,14 @@ header {
   height: 20px;
 }
 
-footer {
+Footer {
   background-color: white;
   position: fixed;
   bottom: 0;
+  left: 0;
   width: 100%;
   padding: 10px 40px;
+  z-index: 999;
 }
 
 .footer__01 {
@@ -209,6 +212,7 @@ footer {
   margin-top: 190px;
   flex-wrap: wrap;
   margin-left: 40px;
+  z-index: 100;
 }
 
 .room__item {
@@ -222,32 +226,34 @@ footer {
 .room__item__imgBox {
   width: 100%;
   height: 100%;
-  position: relative;
   aspect-ratio: 1;
 }
 
 .imgBox {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: fill;
   border-radius: 10px;
 }
 
 .room__like {
   position: absolute;
-  top: 10;
-  right: 0;
-  padding: 20px 10px;
+  top: 10px;
+  right: 0px;
+  padding: 10px;
   color: rgb(255, 56, 92);
   font-size: 30px;
+  z-index: 2;
 }
 
 .room__unlike {
   position: absolute;
-  top: 10;
-  right: 0;
-  padding: 20px 10px;
+  top: 10px;
+  right: 0px;
+  padding: 10px;
   font-size: 30px;
+  z-index: 2;
+  color: black;
 }
 
 .room__item__textBox {
@@ -256,7 +262,8 @@ footer {
   display: flex;
   flex-direction: column;
   padding-left: 10px;
-  margin-top: 20px;
+  z-index: index 200;
+  margin-top: 10px;
 }
 
 .textBox__1 {
@@ -312,7 +319,6 @@ footer {
   height: 105vh;
   position: fixed;
   left: 0px;
-  /* visibility: hidden; */
   padding: 100px 0px;
   font-size: 600px;
 }
@@ -344,4 +350,27 @@ footer {
   border-radius: 10px;
   margin-top: 5px;
   overflow: hidden;
+}
+
+Article {
+  z-index: 1;
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+  background-color: #fff;
+  opacity: 0.5;
+  padding: 15px 5px;
+  border-radius: 20px;
+  color: black !important;
+}
+
+.swiper-button-prev:after,
+.swiper-button-next:after {
+  font-size: 1.1rem !important;
+  font-weight: 600 !important;
+}
+
+.swiper-pagination-bullet {
+  background: black !important;
 }
