FEAT: Footer 완성

--- a/조이-이지은/react/react-kurly/src/components/layout/Header.css
+++ b/조이-이지은/react/react-kurly/src/components/layout/Header.css
@@ -1,13 +1,11 @@
 /* header */
-body {
+#header-all {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
-list {
-  list-style-type: none;
-}
+
 .header {
   display: flex;
   justify-content: center;
