--- a/조이-이지은/react/react-kurly/src/components/layout/Footer.css
+++ b/조이-이지은/react/react-kurly/src/components/layout/Footer.css
@@ -1,14 +1,148 @@
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+/* 시작 */
 #footer-all {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   width: 100%;
+  bottom: 0;
+  height: 586px;
+  /* position: fixed; */
+  /* transform: translateY(-100%); */
+  border-top: 1px solid rgb(238, 238, 238);
+  margin: 1.5rem 0 0 0;
 }
 /* section1 */
 #happy-customer {
   display: flex;
   flex-direction: column;
+  padding: 1.5rem 0;
+  margin: 1.5rem 0;
+  /* width: 100%; */
 }
 #introduce {
   display: flex;
@@ -16,6 +150,8 @@
 }
 #happy-introduce {
   display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .happy-customer-label {
   padding-bottom: 17px;
@@ -81,11 +217,12 @@
 }
 #introduce span {
   color: #5f0080;
+  font-weight: bold;
 }
 /* section3 */
 #cert {
   border-top: 1px solid rgb(238, 238, 238);
-  width: 100%;
+  /* width: 100%; */
   display: flex;
   justify-content: center;
 }
