--- a/조이-이지은/react/react-kurly/src/components/pages/Home.css
+++ b/조이-이지은/react/react-kurly/src/components/pages/Home.css
@@ -1,64 +1,16 @@
 /* main */
-/* .main-1 {
+.main-1 {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-#slideShow {
-  width: 1700px;
-  height: 370px;
-  position: relative;
-  margin: 10px auto;
-  overflow: hidden;
-}
-
-.slides {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 1900px;
-  transition: 0.5s ease-out;
-}
-.slides:hover {
-  cursor: pointer;
-}
-.slides li:first-child {
-  margin-left: 90px;
-}
-.slides li:not(:last-child) {
-  float: left;
-  margin-right: 80px;
-}
-
-.controller span {
-  position: absolute;
-  background-color: transparent;
-  color: black;
-  text-align: center;
-  border-radius: 50%;
-  padding: 10px 20px;
-  margin: 0 250px;
-  top: 30%;
-  font-size: 1.3em;
-  cursor: pointer;
-}
-.controller span:hover {
-  background-color: rgba(128, 128, 128, 0.5);
-}
-.prev {
-  left: 10px;
-}
-.next {
-  right: 10px;
-} */
 #home-all {
-  width: 100%;
-  height: auto;
-  min-height: 100%;
-  padding-bottom: 586px;
-  /* margin-bottom: 50rem; */
+  /* display: flex;
+  flex-direction: column;
+  justify-content: center; */
 }
+
 .main-2 {
   display: flex;
   flex-direction: column;
