--- a/하니-박하나/03/melonticket-work/src/pages/Home.module.css
+++ b/하니-박하나/03/melonticket-work/src/pages/Home.module.css
@@ -1,4 +1,4 @@
-@import "./Components/reset.css";
+@import "../Components/reset.css";
 
 @font-face {
     font-family: 'Arita-dotum-Medium';
@@ -39,7 +39,7 @@ html {
     display: block;
     width: 3.8rem;
     height: 2.9rem;
-    background-image: url(./assets/btn_gnb_20190304.png); 
+    background-image: url(../assets/btn_gnb_20190304.png); 
     background-position: -0.7rem -0.1rem;
 }
 
@@ -61,10 +61,9 @@ html {
     width: 100%;
 }
 
-.Service_list > li {
+.Service_list > span {
     display: inline-block;
     text-align: center;
-    position: relative;
 }
 
 .Btn_world::after {
@@ -76,11 +75,11 @@ html {
     background-position: -94rem -0.1rem;
 }
 
-.Service_list > li::after {
+.Service_list >span::after {
     content: "";
     display: block;
     height: 2.9rem;
-    background-image: url(./assets/btn_gnb_20190304.png); 
+    background-image: url(../assets/btn_gnb_20190304.png); 
 }
 
 .Btn_login::after {
@@ -160,7 +159,7 @@ html {
     display: block;
     width: 2.3rem;
     height: 2.3rem;
-    background-image: url(./assets/btn_comm.png);     
+    background-image: url(../assets/btn_comm.png);     
 }
 
 .Search_logo::after {
@@ -212,7 +211,7 @@ html {
     display: block;
     width: 2rem;
     height: 1.7rem;
-    background-image: url(./assets/btn_comm.png);     
+    background-image: url(../assets/btn_comm.png);     
 }
 
 .Pre_btn::after {
@@ -245,11 +244,11 @@ html {
     height: 4.2rem;
 }
 
-.Menu_list > a::after {
+.Menu_list > span::after {
     content: "";
     display: block;
     height: 4.2rem;
-    background-image: url(./assets/btn_gnb_20190304.png);     
+    background-image: url(../assets/btn_gnb_20190304.png);     
 }
 
 .Btn_1::after {
@@ -257,6 +256,8 @@ html {
   width: 4.4rem;
   background-position: -1rem -16rem;
 }
+
+
 
 .Btn_2::after {
     width: 6.8rem;
@@ -714,35 +715,3 @@ html {
     height: 24.96rem;
 }
 
-/** Concert.js**/
-
-.Concert_highlight {
-    width: 100.8rem;
-    height: 45.82rem;
-}
-
-.Concert_highlight > h2 {
-    width: 14.4rem;
-    height: 3.1rem;
-    font-size: 2.8rem;
-    color: #00B523;
-    margin: 3rem 0 2.4rem;
-}
-
-.Highlight_list {
-    height: 40.32rem;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-.Highlight_list > li > img {
-    width: 23.7rem;
-    height: 33.3rem;
-}
-
-.Highlight_Info {
-    width: 22.7rem;
-    display: flex;
-    flex-direction: column;
-}
