Feat: useState 적용...

--- a/조이-이지은/react/react-kurly/src/components/layout/Header.css
+++ b/조이-이지은/react/react-kurly/src/components/layout/Header.css
@@ -121,3 +121,11 @@
   color: #5f0080;
   font-weight: bold;
 }
+.main-2-img {
+  position: relative;
+}
+.main-cart-img {
+  position: absolute;
+  top: 48%;
+  left: 70%;
+}
