--- a/하니-박하나/03/melonticket-work/src/App.css
+++ b/하니-박하나/03/melonticket-work/src/App.css
@@ -79,45 +79,20 @@ html {
 .Service_list > li::after {
     content: "";
     display: block;
-    height: 2.9rem;
-    background-image: url(./assets/btn_gnb_20190304.png); 
+}
+
+.active {
+    color: #00B523;
 }
 
 .Btn_login::after {
     width: 5.9rem;
-    background-position:-74rem -0.1rem;
 }
 
-.Btn_login.active::after {
-    background-position:-74rem -3rem;
-}
-
-.Btn_join::after {
-    width: 7.1rem;
-    background-position: -79.9rem -0.1rem;
-}
-
-.Btn_join.active::after {
-    background-position:-79.9rem -3rem;
-}
-
-.Btn_customer::after{
-    width: 7.1rem;
-    background-position: -87rem -0.1rem;
-}
-
-.Btn_customer.active::after{
-    background-position: -87rem -3rem;
-}
-
+.Btn_join::after,
+.Btn_customer::after,
 .Btn_howto::after{
     width: 7.1rem;
-    background-position: -94.1rem -11.7rem;
-}
-
-.Btn_howto.active::after{
-    width: 7.1rem;
-    background-position: -87.4rem -11.7rem;
 }
 
 .Search_wrap {
@@ -745,4 +720,40 @@ html {
     width: 22.7rem;
     display: flex;
     flex-direction: column;
+}
+
+/*로그인 컴포넌트 css*/
+.Login_logo {
+    padding: 6.8rem 0 4.2rem;
+}
+
+.Login_wrap {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2.9rem 0 2.3rem;
+}
+
+.Form_wrap {
+    width: 38.96rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.Form_wrap > input {
+    height: 4.98rem;
+}
+
+.Save_wrap {
+    height: 3.9rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.Form_wrap > button {
+    height: 6rem;
+    padding: 1.9rem 0 1.5rem;
+    background-color: #00CD3C;
+    border: 0;
 }
