--- a/조이-이지은/react/react-kurly/src/components/layout/Header.css
+++ b/조이-이지은/react/react-kurly/src/components/layout/Header.css
@@ -129,3 +129,12 @@
   top: 48%;
   left: 70%;
 }
+#cart-count {
+  background-color: #5f0080;
+  color: #fff;
+  width: 10px;
+  height: 5px;
+  padding: 2px;
+  font-size: 0.5rem;
+  border-radius: 10rem;
+}
