Feat: Host page media query

--- a/안나-김민희/react-airbnb-app/src/pages/Host.css
+++ b/안나-김민희/react-airbnb-app/src/pages/Host.css
@@ -16,6 +16,13 @@
   color: black;
 }
 
+@media screen and (max-width: 1400px) {
+  .silder,
+  .intro__income__slider {
+    width: 100%;
+  }
+}
+
 .intro__income__slider:active .intro__income__description {
   visibility: hidden;
 }
